<resources>
    <string name="app_name" translatable="false">FacebookApp</string>
    <string name="username" translatable="false">Unblast</string>
    <string name="TimePost" translatable="false">2 hrs</string>
    <string name="content" translatable="false">Buckle up, because change is coming to WordPress
    http://unblast.com/color-schemes</string>
    <string name="CountLikes" translatable="false">12</string>
    <string name="countshare" translatable="false">1 Share</string>
    <string name="share" translatable="false">Share</string>
    <string name="like" translatable="false">Like</string>
    <string name="comment" translatable="false">Comment</string>
    <string name="Login" translatable="false">Log In</string>
    <string name="signUPforFacebook" translatable="false">Sign Up For Facebook</string>
    <string name="HelpCenter" translatable="false">Help Center</string>
    <string name="HintEmailOrPhone" translatable="false"> Email or Phone Number</string>
    <string name="HintPassword" translatable="false">Password</string>
    <string name="facebooktitle" translatable="false">facebook</string>
    <string name="second30" translatable="false">30 second</string>
    <string name="hour1" translatable="false">1 hour</string>
    <string name="hour2" translatable="false">2 hour</string>
    <string name="hour3" translatable="false">3 hour</string>
    <string name="hour4" translatable="false">4 hour </string>
    <string name="title_activity_main2">MainActivity2</string>

</resources>