<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base.Theme.Facebook"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CrV_ProfilePichture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/profilepicture" />

    <TextView
        android:id="@+id/TV_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/CrV_ProfilePichture"
        app:layout_constraintTop_toTopOf="@id/CrV_ProfilePichture"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/TV_TimePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/TV_username"
        app:layout_constraintTop_toBottomOf="@id/TV_username"
        tools:text="@string/TimePost" />

    <ImageView
        android:id="@+id/IMV_ic_earth"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_earth"
        app:layout_constraintBottom_toBottomOf="@id/TV_TimePost"
        app:layout_constraintStart_toEndOf="@id/TV_TimePost"
        app:layout_constraintTop_toTopOf="@id/TV_TimePost" />

    <ImageView
        android:id="@+id/IMV_more"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <TextView
        android:id="@+id/TV_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="start"
        android:padding="8dp"
        android:textColorLink="@color/blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CrV_ProfilePichture"
        tools:text="@string/content" />


    <ImageView
        android:id="@+id/IMV_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TV_content"
        tools:src="@drawable/post"

        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_like_counts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="12"
        android:textColor="@color/Gray"
        android:textStyle="bold"
        app:icon="@drawable/likeblue"
        app:iconSize="24dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IMV_post" />

    <ImageView
        android:id="@+id/IMV_downarrwo"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IMV_post"

        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/IMV_ProfilePichture2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@id/IMV_downarrwo"
        app:layout_constraintEnd_toStartOf="@id/IMV_downarrwo"
        app:layout_constraintTop_toTopOf="@id/IMV_downarrwo"
        tools:src="@drawable/profilepicture" />

    <TextView
        android:id="@+id/TV_counntshare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/countshare"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/IMV_ProfilePichture2"
        app:layout_constraintEnd_toStartOf="@id/IMV_ProfilePichture2"
        app:layout_constraintTop_toTopOf="@id/IMV_ProfilePichture2" />


    <View
        android:id="@+id/vi_Line_One"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_like_counts" />

    <LinearLayout
        android:id="@+id/ly_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/vi_Line_One">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_click_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/like"
            android:textAllCaps="false"
            android:textColor="@color/Gray"
            android:textStyle="bold"
            app:icon="@drawable/ic_like"
            app:iconSize="24dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add"


            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_click_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/comment"
            android:textAllCaps="false"
            android:textColor="@color/Gray"
            android:textStyle="bold"
            app:icon="@drawable/ic_communt"
            app:iconSize="24dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_click_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/Gray"
            android:textStyle="bold"
            app:icon="@drawable/ic_share"
            app:iconSize="24dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add" />

    </LinearLayout>

    <View
        android:id="@+id/vi_Line_Two"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly_linear" />


</androidx.constraintlayout.widget.ConstraintLayout>